# runner

./: Cargo.toml  README.md  justfile  yahallo
docker/java/: Dockerfile  start-java.sh
docker/python/: Dockerfile  start-python.sh
metadata/: java.toml  python.toml
src/: main.rs
test/: recipe.toml
test/fail/: recipe.toml
test/hello/: recipe.toml
test/hello/java/: Main.java
test/hello/python/: main.py
test/matrix/: recipe.toml
test/matrix/solution/: Main.java
test/recipes/: python.toml
test/src/java/: Main.java
test/src/python/: main.py
